--- a/animations/animation_2_3/index.html
+++ b/animations/animation_2_3/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/styles/style.css" />
-    <title>animation_2_2</title>
+    <title>animation_2_3</title>
   </head>
   <body>
     <section class="container">
-      <div class="ball"></div>
+      <img src="./assets/img/picture.jpg" alt="" />
     </section>
   </body>
 </html>
