--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <ul>
       <li><a href="./animations/animation_2_2/index.html">animation_2_2</a></li>
       <li><a href="./animations/animation_2_3/index.html">animation_2_3</a></li>
+      <li>
+        <a href="./animations/animation_3_1/index.html">animations_3_1</a>
+      </li>
     </ul>
   </body>
 </html>
