--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <li>
         <a href="./animations/animation_3_1/index.html">animations_3_1</a>
       </li>
+      <li><a href="./animations/animation_3_2/index.html">animation_3_2</a></li>
     </ul>
   </body>
 </html>
