--- a/animations/animation_3_2/index.html
+++ b/animations/animation_3_2/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/styles/style.css" />
-    <title>positioned_layout</title>
+    <title>animation_3_2</title>
   </head>
   <body>
     <section class="container">
